# python-project-template

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
